// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ecmascript parser when "react" is false, the react transform configuration is not included 1`] = `
{
  "jsc": {
    "externalHelpers": true,
    "parser": {
      "jsx": false,
      "syntax": "ecmascript",
    },
    "target": "es2022",
    "transform": undefined,
  },
  "module": {
    "ignoreDynamic": true,
    "strict": true,
    "type": "es6",
  },
}
`;

exports[`ecmascript parser when "react" is not set, the react transform configuration is not included 1`] = `
{
  "jsc": {
    "externalHelpers": true,
    "parser": {
      "jsx": false,
      "syntax": "ecmascript",
    },
    "target": "es2022",
    "transform": undefined,
  },
  "module": {
    "ignoreDynamic": true,
    "strict": true,
    "type": "es6",
  },
}
`;

exports[`ecmascript parser when "react" is true, the react transform configuration is included 1`] = `
{
  "jsc": {
    "externalHelpers": true,
    "parser": {
      "jsx": true,
      "syntax": "ecmascript",
    },
    "target": "es2022",
    "transform": {
      "react": {
        "runtime": "automatic",
        "useBuiltins": true,
      },
    },
  },
  "module": {
    "ignoreDynamic": true,
    "strict": true,
    "type": "es6",
  },
}
`;

exports[`typescript parser when "react" is false, the react transform configuration is not included 1`] = `
{
  "jsc": {
    "externalHelpers": true,
    "parser": {
      "syntax": "typescript",
      "tsx": false,
    },
    "target": "es2022",
    "transform": undefined,
  },
  "module": {
    "ignoreDynamic": true,
    "strict": true,
    "type": "es6",
  },
}
`;

exports[`typescript parser when "react" is not set, the react transform configuration is not included 1`] = `
{
  "jsc": {
    "externalHelpers": true,
    "parser": {
      "syntax": "typescript",
      "tsx": false,
    },
    "target": "es2022",
    "transform": undefined,
  },
  "module": {
    "ignoreDynamic": true,
    "strict": true,
    "type": "es6",
  },
}
`;

exports[`typescript parser when "react" is true, the react transform configuration is included 1`] = `
{
  "jsc": {
    "externalHelpers": true,
    "parser": {
      "syntax": "typescript",
      "tsx": true,
    },
    "target": "es2022",
    "transform": {
      "react": {
        "runtime": "automatic",
        "useBuiltins": true,
      },
    },
  },
  "module": {
    "ignoreDynamic": true,
    "strict": true,
    "type": "es6",
  },
}
`;

exports[`when "parser" is not set, the configuration parser is typescript 1`] = `
{
  "jsc": {
    "externalHelpers": true,
    "parser": {
      "syntax": "typescript",
      "tsx": false,
    },
    "target": "es2022",
    "transform": undefined,
  },
  "module": {
    "ignoreDynamic": true,
    "strict": true,
    "type": "es6",
  },
}
`;
